@@ -4,6 +4,10 @@ django-profile Changelog
 
 Development version
 -------------------
+* Added an avatar upload quota. By default, 5Mbytes, but can be
+  customized via the AVATAR_QUOTA setting (read INSTALL.txt).
+  Thanks to Tristan Brotherton. Based on this django code:
+  http://code.djangoproject.com/browser/django/trunk/tests/regressiontests/file_uploads/uploadhandler.py#L7
 * Avatar crop bug finally solved. Thanks to stephane.angel:
 	http://code.google.com/p/django-profile/issues/detail?id=52
 * Added the French translation. Thanks so much to stephane.angel:
